Fix tooltip flicker in submenu

--- a/static/notes.css
+++ b/static/notes.css
@@ -106,6 +106,10 @@ svg {
 
 .bar > .button > svg {
   height: .8em;
+}
+
+.bar > .button > svg,
+.menu.bar > .button > * {
   pointer-events: none;
 }
 
